修复了Feed下用户关注信息更新不正确的问题
